--- a/templates/customers/customer_edit.html
+++ b/templates/customers/customer_edit.html
@@ -59,7 +59,7 @@
                     <i class="fas fa-info-circle me-2"></i>
                 {% endif %}
                 {{ message }}
-                <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
             {% endfor %}
         </div>
