--- a/templates/services/order_list.html
+++ b/templates/services/order_list.html
@@ -383,7 +383,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Cancel Order</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" title="Close" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <form id="cancelOrderForm" method="post">
